@@ -1,6 +1,10 @@
 # ChangeLog for java-virtuals/jpa
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  16 Aug 2015; Johann Schmitz <ercpe@gentoo.org> jpa-1.0.ebuild,
+  jpa-2.1.0.ebuild:
+  java-virtuals/jpa: Updated ebuild headers to match new $Id$ line
 
   18 Jan 2014; Johann Schmitz <ercpe@gentoo.org> jpa-2.1.0.ebuild:
   Fixed dependency
